--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^5.4.1",
     "react-github-btn": "1.4.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "6.11.0",
