--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "5.11.16",
+    "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "5.12.3",
     "@mui/x-data-grid": "^7.24.0",
+    "@mui/x-date-pickers": "^7.28.3",
     "@uiw/react-md-editor": "^4.0.5",
     "axios": "^1.7.9",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "dayjs": "^1.11.13",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
